# DQDsystem

./: .gitignore  CMakeLists.txt  DQDevaluator.sln  DQDsystem.sln  README.md  compile_commands.json.lnk
DQD/: DQD.cpp  DQD.h  DQD.vcxproj  DQD.vcxproj.filters  HL_HM.cpp  HL_HM.h  HL_HM.hpp  HeitlerLondon.cpp  HeitlerLondon.h  HilbertSpace.cpp  HilbertSpace.h  HilbertSpace.hpp  MathUtilities.cpp  MathUtilities.h  MathUtilities.hpp  hilbert_space.cpp  hilbert_space.hpp  hl_hm.cpp  hl_hm.hpp  math_utilities.cpp  math_utilities.hpp
DQDevaluator/: DQDevaluator.vcxproj
HL_Test/: HL_Test.vcxproj  stdafx.cpp  stdafx.h  targetver.h  unittest1.cpp
Test/: Makefile  Test.cpp  Test.vcxproj  main.cpp
Utilities/: Fourier.cpp  Fourier.h  Fourier.hpp  Plot.cpp  Plot.h  Plot.hpp  fourier.cpp  plot.cpp  plot.hpp
Utilities/gnugraph/: README.md
Utilities/gnugraph/examples/: CMakeLists.txt
Utilities/gnugraph/examples/src/: Main.cpp
src/DQD/: hilbert_space.cpp  hilbert_space.hpp  hl_hm.cpp  hl_hm.hpp  hmp3d.cpp  hmp3d.hpp
src/Utilities/: fourier.cpp  fourier.hpp  math_utilities.cpp  math_utilities.hpp  plot.cpp  plot.hpp
